--- a/LLVM-Practice.cabal
+++ b/LLVM-Practice.cabal
@@ -15,9 +15,16 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     Lib
-  build-depends:       base >= 4.7 && < 5
+  exposed-modules:     MyLex, MyPar, MySyntax, MyTest
+  build-depends:       base              >= 4.7 && < 5
+                     , haskeline         >= 0.7.1.2
+                     , llvm-general      >= 3.5.0.0
+                     , llvm-general-pure >= 3.5.0
+                     , parsec            >= 3.1
+                     , mtl               >= 2.1.3
+                     , transformers      >= 0.3.0.0 && < 0.5
   default-language:    Haskell2010
+
 
 executable LLVM-Practice-exe
   hs-source-dirs:      app
@@ -25,6 +32,8 @@ executable LLVM-Practice-exe
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
                      , LLVM-Practice
+                     , mtl >= 2.1.3
+                     , haskeline >= 0.7.1.2
   default-language:    Haskell2010
 
 test-suite LLVM-Practice-test
