--- a/stack.yaml
+++ b/stack.yaml
@@ -8,7 +8,12 @@ packages:
 - '.'
 
 # Packages to be pulled from upstream that are not in the resolver (e.g., acme-missiles-0.3)
-extra-deps: []
+extra-deps:
+- llvm-general-3.5.1.2
+- llvm-general-pure-3.5.1.0
+
+extra-lib-dirs:
+- /usr/local/Cellar/libffi/3.0.13/lib
 
 # Override default flag values for local packages and extra-deps
 flags: {}
